Colaboratory를 통해 생성됨

--- a/codeit/02-normal-equation.ipynb
+++ b/codeit/02-normal-equation.ipynb
@@ -32,7 +32,9 @@
         "id": "WfgQSbgOoe-2"
       },
       "source": [
-        "# normal_equation"
+        "# normal_equation\n",
+        "\n",
+        "- θ = (X.T X)−1 X.T y"
       ],
       "id": "WfgQSbgOoe-2"
     },
@@ -66,11 +68,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rQzNZ6F7Ck2z",
-        "outputId": "b6e6cf5a-2182-48c4-87cf-2868c0e417bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rQzNZ6F7Ck2z",
+        "outputId": "b6e6cf5a-2182-48c4-87cf-2868c0e417bf"
       },
       "source": [
         "# 입력 변수\n",
