Colaboratory를 통해 생성됨

--- a/codeit/08-01-L1-L2-정규화.ipynb
+++ b/codeit/08-01-L1-L2-정규화.ipynb
@@ -6,6 +6,13 @@
       "name": "Untitled.ipynb",
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -25,7 +32,7 @@
         "id": "WfgQSbgOoe-2"
       },
       "source": [
-        "L1, L2 정규화"
+        "# L1, L2 정규화"
       ],
       "id": "WfgQSbgOoe-2"
     },
@@ -45,7 +52,7 @@
         "import pandas as pd"
       ],
       "id": "RK3QTbWDofS7",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -55,11 +62,21 @@
       },
       "source": [
         "# 데이터 파일 경로 정의\n",
-        "INSURANCE_FILE_PATH = './datasets/insurance.csv'\n",
+        "INSURANCE_FILE_PATH = 'https://raw.githubusercontent.com/dantae74/machine-learning/main/codeit/datasets/insurance.csv'\n",
         "\n",
-        "insurance_df = pd.read_csv(INSURANCE_FILE_PATH)  # 데이터를 pandas dataframe으로 갖고 온다 (insurance_df.head()를 사용해서 데이터를 한 번 살펴보세요!)\n",
-        "insurance_df = pd.get_dummies(data=insurance_df, columns=['sex', 'smoker', 'region'])  # 필요한 열들에 One-hot Encoding을 해준다\n",
-        "\n",
+        "insurance_df = pd.read_csv(INSURANCE_FILE_PATH)\n",
+        "insurance_df = pd.get_dummies(data=insurance_df, columns=['sex', 'smoker', 'region'])"
+      ],
+      "id": "30dxHmEPog-b",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "URPHO8nGQs4R"
+      },
+      "source": [
         "# 입력 변수 데이터를 따로 새로운 dataframe에 저장\n",
         "X = insurance_df.drop(['charges'], axis=1)\n",
         "\n",
@@ -69,8 +86,22 @@
         "features = polynomial_transformer.get_feature_names(X.columns)  # 새로운 변수 이름들 생성\n",
         "\n",
         "X = pd.DataFrame(polynomial_features, columns=features)  # 다항 입력 변수를 dataframe으로 만들어 준다\n",
-        "y = insurance_df[['charges']]  # 목표 변수 정의\n",
-        "\n",
+        "y = insurance_df[['charges']]  # 목표 변수 정의"
+      ],
+      "id": "URPHO8nGQs4R",
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-MgCXv3QRQZh",
+        "outputId": "02c1b49d-1ab4-4bb0-9605-1e34d131fe08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
         "# 여기 코드를 쓰세요\n",
         "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=5)\n",
         "\n",
@@ -78,9 +109,31 @@
         "model.fit(x_train, y_train)\n",
         "\n",
         "y_train_predict = model.predict(x_train)\n",
-        "y_test_predict = model.predict(x_test)\n",
-        "\n",
-        "\n",
+        "y_test_predict = model.predict(x_test)"
+      ],
+      "id": "-MgCXv3QRQZh",
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_coordinate_descent.py:476: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations. Duality gap: 19269383.112592697, tolerance: 1054728.1616667064\n",
+            "  positive)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cpjEjw4kRQRy",
+        "outputId": "2534f74e-c8b4-4adf-ed9e-40add40fa200",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
         "# 체점용 코드\n",
         "mse = mean_squared_error(y_train, y_train_predict)\n",
         "\n",
@@ -92,9 +145,34 @@
         "\n",
         "print(\"testing set에서 성능\")\n",
         "print(\"-----------------------\")\n",
-        "print(f'오차: {sqrt(mse)}')\n"
+        "print(f'오차: {sqrt(mse)}')"
       ],
-      "id": "30dxHmEPog-b",
+      "id": "cpjEjw4kRQRy",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "training set에서 성능\n",
+            "-----------------------\n",
+            "오차: 1462.6016398033548\n",
+            "testing set에서 성능\n",
+            "-----------------------\n",
+            "오차: 11841.478194388288\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L8eEhOPmRcdw"
+      },
+      "source": [
+        ""
+      ],
+      "id": "L8eEhOPmRcdw",
       "execution_count": null,
       "outputs": []
     }
