Colaboratory를 통해 생성됨

--- a/codeit/08-01-L1-L2-정규화.ipynb
+++ b/codeit/08-01-L1-L2-정규화.ipynb
@@ -68,7 +68,7 @@
         "insurance_df = pd.get_dummies(data=insurance_df, columns=['sex', 'smoker', 'region'])"
       ],
       "id": "30dxHmEPog-b",
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -89,17 +89,17 @@
         "y = insurance_df[['charges']]  # 목표 변수 정의"
       ],
       "id": "URPHO8nGQs4R",
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-MgCXv3QRQZh",
-        "outputId": "02c1b49d-1ab4-4bb0-9605-1e34d131fe08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8613f78-38ac-423c-b6e9-5d816f72b74a"
       },
       "source": [
         "# 여기 코드를 쓰세요\n",
@@ -109,10 +109,13 @@
         "model.fit(x_train, y_train)\n",
         "\n",
         "y_train_predict = model.predict(x_train)\n",
+        "y_test_predict = model.predict(x_test)\n",
+        "\n",
+        "y_train_predict = model.predict(x_train)\n",
         "y_test_predict = model.predict(x_test)"
       ],
       "id": "-MgCXv3QRQZh",
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,10 +131,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "cpjEjw4kRQRy",
-        "outputId": "2534f74e-c8b4-4adf-ed9e-40add40fa200",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dd3c7b0d-63d3-4d9f-ae25-ea84b10663f9"
       },
       "source": [
         "# 체점용 코드\n",
@@ -148,7 +151,7 @@
         "print(f'오차: {sqrt(mse)}')"
       ],
       "id": "cpjEjw4kRQRy",
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +176,7 @@
         ""
       ],
       "id": "L8eEhOPmRcdw",
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ]
