Colaboratory를 통해 생성됨

--- a/codeit/12-03-artificial-neural-network-backpropagation.ipynb
+++ b/codeit/12-03-artificial-neural-network-backpropagation.ipynb
@@ -205,7 +205,8 @@
         "    for layer in range(L, 0, -1):\n",
         "        # 역전파 행렬 연산을 사용해서 각 요소에 대한 편미분 계산\n",
         "        # 코드를 쓰세요\n",
-        "        db = d_sigmoid(cache['z'+str(layer)]) * cache['a'+str(layer)]\n",
+        "        da = 2*(cache['a'+str(layer)] - y) \n",
+        "        db = d_sigmoid(cache['z'+str(layer)]) * da\n",
         "        dW = np.outer(db, cache['a'+str(layer-1)])\n",
         "        \n",
         "        # 계산한 편미분 값들을 저장\n",
