Colaboratory를 통해 생성됨

--- a/stock-etc/99-03-rnn-lot.ipynb
+++ b/stock-etc/99-03-rnn-lot.ipynb
@@ -33,7 +33,7 @@
         "id": "WfgQSbgOoe-2"
       },
       "source": [
-        "모두를 위한 머신러닝에서 가져왔습니다.\n",
+        "\n",
         "# RNN-lot\n"
       ],
       "id": "WfgQSbgOoe-2"
@@ -75,9 +75,6 @@
       "source": [
         "# 마지막 회차 번호\n",
         "noEnd ='974' \n",
-        "\n",
-        "# url\n",
-        "# url = 'https://dhlottery.co.kr/gameResult.do?method=allWinExel&gubun=byWin&nowPage=&drwNoStart=1&drwNoEnd={}'.format(noEnd)\n",
         "\n",
         "url = f'https://dhlottery.co.kr/gameResult.do?method=allWinExel&gubun=byWin&nowPage=&drwNoStart=1&drwNoEnd={noEnd}'\n",
         "\n",
@@ -363,9 +360,33 @@
         "id": "aCrJzNKXg80K"
       },
       "source": [
-        "x_train.shape"
+        "x_train[1,1,:]"
       ],
       "id": "aCrJzNKXg80K",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YZe1ohcksdVn"
+      },
+      "source": [
+        "y_train[0,:]"
+      ],
+      "id": "YZe1ohcksdVn",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TzBwEc6SsdRY"
+      },
+      "source": [
+        ""
+      ],
+      "id": "TzBwEc6SsdRY",
       "execution_count": null,
       "outputs": []
     },
@@ -469,37 +490,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2t3APFPXMJ3c"
-      },
-      "source": [
-        "pred = model(x_test)\n",
-        "pred"
-      ],
-      "id": "2t3APFPXMJ3c",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cT7xPrA1T_19"
-      },
-      "source": [
-        "del model"
-      ],
-      "id": "cT7xPrA1T_19",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "I-DjzLjyUAxh"
+      },
+      "source": [
+        "model.evaluate(x_test, y_test, batch_size=1)"
+      ],
+      "id": "I-DjzLjyUAxh",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v5HQ88bG4cE1"
       },
       "source": [
         ""
       ],
-      "id": "I-DjzLjyUAxh",
+      "id": "v5HQ88bG4cE1",
       "execution_count": null,
       "outputs": []
     }
