Colaboratory를 통해 생성됨

--- a/stock-etc/99-03-rnn-lot.ipynb
+++ b/stock-etc/99-03-rnn-lot.ipynb
@@ -74,7 +74,7 @@
       },
       "source": [
         "# 마지막 회차 번호\n",
-        "noEnd ='974' \n",
+        "noEnd ='979' \n",
         "\n",
         "url = f'https://dhlottery.co.kr/gameResult.do?method=allWinExel&gubun=byWin&nowPage=&drwNoStart=1&drwNoEnd={noEnd}'\n",
         "\n",
@@ -410,7 +410,7 @@
         "    keras.layers.LSTM(rnn_units, return_sequences=False, stateful=True, recurrent_initializer='glorot_uniform'),\n",
         "    # keras.layers.LSTM(rnn_units, batch_input_shape=(None, 7, 45), return_sequences=True, stateful=False),\n",
         "    # keras.layers.LSTM(rnn_units, return_sequences=True, stateful=False),\n",
-        "    keras.layers.Dense(45, activation='sigmoid')\n",
+        "    keras.layers.Dense(45, activation='relu')\n",
         "])\n",
         "\n",
         "# 모델을 컴파일합니다.\n",
@@ -448,8 +448,14 @@
         "id": "sA9XuTjCnNkV"
       },
       "source": [
-        "EPOCHS=100\n",
-        "history = model.fit(x_train, y_train, epochs=EPOCHS, batch_size = 1, validation_data=(x_val, y_val), callbacks=[checkpoint_callback])"
+        "EPOCHS=128\n",
+        "history = model.fit(x_train, \n",
+        "                    y_train, \n",
+        "                    epochs=EPOCHS, \n",
+        "                    batch_size = 1, \n",
+        "                    validation_data=(x_val, y_val),\n",
+        "                    verbose=0, \n",
+        "                    callbacks=[checkpoint_callback])"
       ],
       "id": "sA9XuTjCnNkV",
       "execution_count": null,
@@ -502,12 +508,53 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "j5fEDUJM6Ltc"
+      },
+      "source": [
+        "x_test.shape"
+      ],
+      "id": "j5fEDUJM6Ltc",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "v5HQ88bG4cE1"
       },
       "source": [
-        ""
+        "previous_lotto = tf.reshape(x_test[-1,:,:], (1, 7, 45))"
       ],
       "id": "v5HQ88bG4cE1",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3p6fm9ia6iLJ"
+      },
+      "source": [
+        "pred_lotto = model.predict(previous_lotto)"
+      ],
+      "id": "3p6fm9ia6iLJ",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3j4viNjS7EdK"
+      },
+      "source": [
+        "lotto = []\n",
+        "for i in range(6):\n",
+        "  lotto.append(np.argmax(pred_lotto)+1)\n",
+        "  pred_lotto[0, np.argmax(pred_lotto)] = 0 # reset\n",
+        "\n",
+        "sorted(lotto)"
+      ],
+      "id": "3j4viNjS7EdK",
       "execution_count": null,
       "outputs": []
     }
