Colaboratory를 통해 생성됨

--- a/stock-etc/99-03-rnn-lot.ipynb
+++ b/stock-etc/99-03-rnn-lot.ipynb
@@ -310,10 +310,10 @@
         "id": "ZN5wBU3NcHnn"
       },
       "source": [
-        "# reshape\n",
+        "# numpy and reshape\n",
         "x_data = np.reshape(x_data, (-1,WINDOW_SIZE-1, 45))\n",
         "y_data = np.reshape(y_data, (-1, 45))\n",
-        "x_data.shape"
+        "print(f'x_data.shape: {x_data.shape}, y_data.shape: {y_data.shape}')"
       ],
       "id": "ZN5wBU3NcHnn",
       "execution_count": null,
@@ -325,8 +325,8 @@
         "id": "H-yKR7ngkWki"
       },
       "source": [
-        "x_data = tf.constant(x_data)\n",
-        "y_data = tf.constant(y_data)"
+        "# x_data = tf.constant(x_data)\n",
+        "# y_data = tf.constant(y_data)"
       ],
       "id": "H-yKR7ngkWki",
       "execution_count": null,
@@ -375,18 +375,6 @@
         "y_train[0,:]"
       ],
       "id": "YZe1ohcksdVn",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TzBwEc6SsdRY"
-      },
-      "source": [
-        ""
-      ],
-      "id": "TzBwEc6SsdRY",
       "execution_count": null,
       "outputs": []
     },
@@ -496,6 +484,69 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9SInA0r76PLC"
+      },
+      "source": [
+        "# 88 회부터 현재까지 1등부터 5등까지 상금 평균\n",
+        "mean_prize = [df_lot['1등당첨금액'].iloc[87:].mean(), \n",
+        "              df_lot['2등당첨금액'].iloc[87:].mean(), \n",
+        "              df_lot['3등당첨금액'].iloc[87:].mean(), \n",
+        "              df_lot['4등당첨금액'].iloc[87:].mean(), \n",
+        "              df_lot['5등당첨금액'].iloc[87:].mean()]\n",
+        "print(mean_prize)"
+      ],
+      "id": "9SInA0r76PLC",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y7BKAsUF6kmL"
+      },
+      "source": [
+        "# 등수와 상금을 반환함\n",
+        "# 순위에 오르지 못한 경우에는 등수가 0으로 반환함\n",
+        "def calc_reward(true_numbers, true_bonus, pred_numbers):\n",
+        "\n",
+        "    count = 0\n",
+        "\n",
+        "    for ps in pred_numbers:\n",
+        "        if ps in true_numbers:\n",
+        "            count += 1\n",
+        "\n",
+        "    if count == 6:\n",
+        "        return 0, mean_prize[0]\n",
+        "    elif count == 5 and true_bonus in pred_numbers:\n",
+        "        return 1, mean_prize[1]\n",
+        "    elif count == 5:\n",
+        "        return 2, mean_prize[2]\n",
+        "    elif count == 4:\n",
+        "        return 3, mean_prize[3]\n",
+        "    elif count == 3:\n",
+        "        return 4, mean_prize[4]\n",
+        "\n",
+        "    return 5, 0"
+      ],
+      "id": "y7BKAsUF6kmL",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-EIPucie7cdg"
+      },
+      "source": [
+        ""
+      ],
+      "id": "-EIPucie7cdg",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "I-DjzLjyUAxh"
       },
       "source": [
@@ -555,6 +606,40 @@
         "sorted(lotto)"
       ],
       "id": "3j4viNjS7EdK",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cLNDRc8b7Q0J"
+      },
+      "source": [
+        "def gen_numbers_from_probability(nums_prob):\n",
+        "\n",
+        "    ball_box = []\n",
+        "\n",
+        "    for n in range(45):\n",
+        "        ball_count = int(nums_prob[n] * 100 + 1)\n",
+        "        ball = np.full((ball_count), n+1) #1부터 시작\n",
+        "        ball_box += list(ball)\n",
+        "\n",
+        "    selected_balls = []\n",
+        "\n",
+        "    while True:\n",
+        "        \n",
+        "        if len(selected_balls) == 6:\n",
+        "            break\n",
+        "        \n",
+        "        ball_index = np.random.randint(len(ball_box), size=1)[0]\n",
+        "        ball = ball_box[ball_index]\n",
+        "\n",
+        "        if ball not in selected_balls:\n",
+        "            selected_balls.append(ball)\n",
+        "\n",
+        "    return selected_balls"
+      ],
+      "id": "cLNDRc8b7Q0J",
       "execution_count": null,
       "outputs": []
     }
