Colaboratory를 통해 생성됨

--- a/stock-etc/99-04-rnn-lot.ipynb
+++ b/stock-etc/99-04-rnn-lot.ipynb
@@ -279,7 +279,7 @@
       },
       "source": [
         "# make X and Y data\n",
-        "WINDOW_SIZE = 20\n",
+        "WINDOW_SIZE = 10\n",
         "x_data = []\n",
         "y_data = []\n",
         "for i in range(len(onehot_lotto_numbers)-WINDOW_SIZE):\n",
@@ -452,7 +452,7 @@
         "history = model.fit(x_data, \n",
         "                    y_data, \n",
         "                    epochs=EPOCHS, \n",
-        "                    batch_size = 32, \n",
+        "                    batch_size = 64, \n",
         "                    validation_data=(x_val, y_val),\n",
         "                    verbose=0, \n",
         "                    callbacks=[keras_callback])"
@@ -744,7 +744,7 @@
         "id": "vQTSx9Mxs3Vn"
       },
       "source": [
-        "previous_lotto = np.reshape(x_data[-1,:,:], (1, 7, 45))"
+        "previous_lotto = np.reshape(x_data[-1,:,:], (1, WINDOW_SIZE-1, 45))"
       ],
       "id": "vQTSx9Mxs3Vn",
       "execution_count": null,
@@ -783,6 +783,18 @@
         "get_lotto_from_predicted_number(pred_lotto[0])"
       ],
       "id": "8jVubJuus_PA",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VHJ3A5KQSgA4"
+      },
+      "source": [
+        ""
+      ],
+      "id": "VHJ3A5KQSgA4",
       "execution_count": null,
       "outputs": []
     }
