--- a/codeit/12-03-artificial-neural-network-backpropagation.ipynb
+++ b/codeit/12-03-artificial-neural-network-backpropagation.ipynb
@@ -99,11 +99,11 @@
       },
       "source": [
         "# training, testing 데이터 셋 나누기\n",
-        "# X_train, X_test = X[0:250,], X[250:,]\n",
-        "# Y_train, Y_test = Y[0:250,], Y[250:,]\n",
+        "X_train, X_test = X[0:250,], X[250:,]\n",
+        "Y_train, Y_test = Y[0:250,], Y[250:,]\n",
         "\n",
-        "X_train, X_test = X, X\n",
-        "Y_train, Y_test = Y, Y"
+        "# X_train, X_test = X, X\n",
+        "# Y_train, Y_test = Y, Y"
       ],
       "id": "42pjIRNBHjaP",
       "execution_count": null,
@@ -202,17 +202,21 @@
         "    L = len(cache) // 2\n",
         "    da = (prediction - y) / y.shape[0]\n",
         "    \n",
-        "    for layer in range(L, 0, -1):\n",
-        "        # 역전파 행렬 연산을 사용해서 각 요소에 대한 편미분 계산\n",
-        "        # 코드를 쓰세요\n",
-        "        da = 2*(cache['a'+str(layer)] - y) \n",
-        "        db = d_sigmoid(cache['z'+str(layer)]) * da\n",
-        "        dW = np.outer(db, cache['a'+str(layer-1)])\n",
+        "    for layer in range(L, 0, -1):    \n",
+        "        # 편미분 계산에 필요한 데이터 가지고 오기\n",
+        "        a_prev = cache['a' + str(layer-1)]\n",
+        "        z = cache['z' + str(layer)]\n",
+        "        W = parameters['W' + str(layer)]\n",
+        "        \n",
+        "        # 가중치와 편향 + 전 층 뉴런 출력에 대한 편미분 계산\n",
+        "        db = da * d_sigmoid(z)\n",
+        "        dW = np.outer(db, a_prev)\n",
+        "        da = W.T @ db\n",
         "        \n",
         "        # 계산한 편미분 값들을 저장\n",
         "        gradients['dW' + str(layer)] = dW\n",
         "        gradients['db' + str(layer)] = db\n",
-        "    \n",
+        "\n",
         "    # 계산한 편미분 값들 리턴\n",
         "    return gradients"
       ],
@@ -320,10 +324,8 @@
         "id": "Fgfnn3ZlKUDh"
       },
       "source": [
-        "\"\"\"디버깅을 위한 시각화 코드(쥬피터를 사용하시면 실행 코드 가장 아래줄에 넣어주세요!)\n",
         "plt.plot(loss_list)\n",
-        "plt.show()\n",
-        "\"\"\""
+        "plt.show()"
       ],
       "id": "Fgfnn3ZlKUDh",
       "execution_count": null,
@@ -342,18 +344,6 @@
         "loss_list, parameters = train_nn(X_train, Y_train, X_test, Y_test, neurons_per_layer, 25, 300)"
       ],
       "id": "-SQn9A7UKWV7",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9i21r6yjKYf5"
-      },
-      "source": [
-        ""
-      ],
-      "id": "9i21r6yjKYf5",
       "execution_count": null,
       "outputs": []
     }
