Colaboratory를 통해 생성됨

--- a/kaggle/Untitled.ipynb
+++ b/kaggle/Untitled.ipynb
@@ -6,6 +6,13 @@
       "name": "Untitled.ipynb",
       "provenance": [],
       "include_colab_link": true
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
     }
   },
   "cells": [
@@ -35,7 +42,9 @@
         "id": "RK3QTbWDofS7"
       },
       "source": [
-        ""
+        "!mkdir -p ~/.kaggle\n",
+        "!cp kaggle.json ~/.kaggle\n",
+        "!chmod 600 ~/.kaggle/kaggle.json"
       ],
       "id": "RK3QTbWDofS7",
       "execution_count": null,
@@ -47,7 +56,7 @@
         "id": "30dxHmEPog-b"
       },
       "source": [
-        ""
+        "!kaggle competitions download -c titanic"
       ],
       "id": "30dxHmEPog-b",
       "execution_count": null,
