--- a/kaggle/Untitled.ipynb
+++ b/kaggle/Untitled.ipynb
@@ -42,9 +42,7 @@
         "id": "RK3QTbWDofS7"
       },
       "source": [
-        "!mkdir -p ~/.kaggle\n",
-        "!cp kaggle.json ~/.kaggle\n",
-        "!chmod 600 ~/.kaggle/kaggle.json"
+        "! pip install kaggle"
       ],
       "id": "RK3QTbWDofS7",
       "execution_count": null,
@@ -56,9 +54,35 @@
         "id": "30dxHmEPog-b"
       },
       "source": [
-        "!kaggle competitions download -c titanic"
+        "! mkdir ~/.kaggle\n",
+        "! cp kaggle.json ~/.kaggle/\n",
+        "! chmod 600 ~/.kaggle/kaggle.json"
       ],
       "id": "30dxHmEPog-b",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "201zSLrDqbT-"
+      },
+      "source": [
+        "!kaggle datasets download -d tarunpaparaju/apple-aapl-historical-stock-data"
+      ],
+      "id": "201zSLrDqbT-",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hCjNN3Trrkq9"
+      },
+      "source": [
+        ""
+      ],
+      "id": "hCjNN3Trrkq9",
       "execution_count": null,
       "outputs": []
     }
