Colaboratory를 통해 생성됨

--- a/kaggle/01-apple-stock-analysis.ipynb
+++ b/kaggle/01-apple-stock-analysis.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 5,
   "metadata": {
     "colab": {
-      "name": "01-apple-stock-analysis.ipynb",
+      "name": "Untitled.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -45,7 +45,7 @@
       },
       "source": [
         "# yahoo에서 AAPL 데이터를 정상적으로 가져오기 위해 datareader 업데이트 한다.\n",
-        "pip install --upgrade pandas"
+        "!pip install --upgrade pandas"
       ],
       "id": "uHZ8Zln2wruY",
       "execution_count": null,
@@ -57,7 +57,7 @@
         "id": "8Juwg9Fowxu_"
       },
       "source": [
-        "pip install --upgrade pandas-datareader"
+        "!pip install --upgrade pandas-datareader"
       ],
       "id": "8Juwg9Fowxu_",
       "execution_count": null,
@@ -71,7 +71,13 @@
       "source": [
         "# Yahoo에서 Apple 주식 데이터를 가져오기 위한 라이브러리 import\n",
         "\n",
-        "from pandas_datareader.data import DataReader"
+        "from pandas_datareader.data import DataReader\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pylab as plt\n",
+        "import seaborn as sns\n",
+        "import warnings"
       ],
       "id": "RK3QTbWDofS7",
       "execution_count": null,
@@ -99,7 +105,7 @@
         "id": "nd8BV4SSuPBA"
       },
       "source": [
-        "data = DataReader('AAPL', 'yahoo', dt_start)"
+        "apple_data = DataReader('AAPL', 'yahoo', dt_start)"
       ],
       "id": "nd8BV4SSuPBA",
       "execution_count": null,
@@ -111,9 +117,33 @@
         "id": "jDeFaupRw_59"
       },
       "source": [
-        "data.head"
+        "apple_data.reset_index(inplace=True) # reset_index"
       ],
       "id": "jDeFaupRw_59",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KCI523c32m10"
+      },
+      "source": [
+        "apple_data.head()"
+      ],
+      "id": "KCI523c32m10",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eXYj12qM3Cu9"
+      },
+      "source": [
+        "apple_data.columns"
+      ],
+      "id": "eXYj12qM3Cu9",
       "execution_count": null,
       "outputs": []
     },
@@ -123,9 +153,105 @@
         "id": "su8huPgVxBVd"
       },
       "source": [
-        ""
+        "warnings.simplefilter('ignore')\n",
+        "\n",
+        "%matplotlib inline\n",
+        "%reload_ext autoreload\n",
+        "%autoreload 2"
       ],
       "id": "su8huPgVxBVd",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pnI3ZzQlzBIm"
+      },
+      "source": [
+        "sns.set_style('white')\n",
+        "sns.set_context('paper', font_scale=1.5)\n",
+        "\n",
+        "plt.style.use('fivethirtyeight')\n",
+        "\n",
+        "pd.set_option('display.width', 100)\n",
+        "pd.set_option('display.max_rows', 25)\n",
+        "pd.set_option('display.max_columns', 25)"
+      ],
+      "id": "pnI3ZzQlzBIm",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T6lBtLJzzEEX"
+      },
+      "source": [
+        "apple_data.isna().mean() # checking the null value"
+      ],
+      "id": "T6lBtLJzzEEX",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gD2_Uh7ezdnu"
+      },
+      "source": [
+        "# Data Preprocessing\n",
+        "apple_data['Date'] = pd.to_datetime(apple_data['Date']) # Convert it into timestamp"
+      ],
+      "id": "gD2_Uh7ezdnu",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JYnWDGH8z2w0"
+      },
+      "source": [
+        "type(apple_data['Date'][0]) # Checking the type"
+      ],
+      "id": "JYnWDGH8z2w0",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SX-Mj1PB3mkl"
+      },
+      "source": [
+        "del apple_data['Adj Close'] # del Adj CLose cols"
+      ],
+      "id": "SX-Mj1PB3mkl",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sckVK00c3sW7"
+      },
+      "source": [
+        "apple_data.head()"
+      ],
+      "id": "sckVK00c3sW7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hGz-8JZ43vPD"
+      },
+      "source": [
+        ""
+      ],
+      "id": "hGz-8JZ43vPD",
       "execution_count": null,
       "outputs": []
     }
